# fraud-env

./: ADVANCED_DETECTOR_REPORT.md  Dockerfile  README.md  README_HF.md  SUBMISSION_SUMMARY.md  advanced_fraud_detector.py  hf_git_auth.ps1  inference.py  openenv.yaml  pyproject.toml  requirements.txt  verify_submission.py
server/: app.py  env_logic.py  graders.py  models.py  tasks.py
