[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fraud-detection-env"
version = "1.0.0"
description = "OpenEnv RL environment for training intelligent fraud detection agents"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Fraud Detection Team"}
]

dependencies = [
    "fastapi==0.104.1",
    "uvicorn==0.24.0",
    "pydantic==2.5.0",
    "httpx==0.25.1",
    "openai>=2.7.2",
    "python-dotenv==1.0.0",
    "websockets>=15.0.1",
    "openenv-core>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
]

[project.urls]
Homepage = "https://github.com/Srinivas984/fraud-env"
Repository = "https://github.com/Srinivas984/fraud-env.git"

[project.scripts]
server = "server.app:main"

[tool.setuptools]
packages = ["server"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
